welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:80: error: Unit does not take parameters
    faireMotif()
              ^